--- a/src/components/ImageCarousel.astro
+++ b/src/components/ImageCarousel.astro
@@ -17,7 +17,8 @@ const { images, projectName, projectId } = Astro.props;
           data-slide={index}
         >
           <img 
-            src={image} 
+            src={`${import.meta.env.BASE_URL}${image}`}   
+            
             alt={`${projectName} - Screenshot ${index + 1}`}
             class="project-screenshot"
             loading="lazy"
