--- a/src/components/ImageCarousel.astro
+++ b/src/components/ImageCarousel.astro
@@ -17,8 +17,7 @@ const { images, projectName, projectId } = Astro.props;
           data-slide={index}
         >
           <img 
-            src={`${import.meta.env.BASE_URL}${image}`}   
-            
+            src={`${import.meta.env.BASE_URL}${image.replace(/^\/+/, '')}`}  
             alt={`${projectName} - Screenshot ${index + 1}`}
             class="project-screenshot"
             loading="lazy"
