--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import HeroSection from '../components/HeroSection.astro';
-import AboutSection from '../components/AboutSection.astro';
-import ProjectsSection from '../components/ProjectsSection.astro';
-import ContactSection from '../components/ContactSection.astro';
-import '../styles/global.css';
+import App from "../components/App.astro";
 ---
 
-<Layout title="xScherpschutter - Portafolio">
-  <HeroSection />
-  <AboutSection />
-  <ProjectsSection />
-  <ContactSection />
-</Layout>
+<App lang="en" />
